--- a/style.css
+++ b/style.css
@@ -10,7 +10,17 @@ header {
     width: 100%;
     height: 15vh;
 
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
+
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+#header-text {
+    width: 50%;
+
+    margin: 2rem;
 }
 
 main {
