--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 main {
-    width: 100%;
+    width: 100vw;
     max-width: 900px;
     margin: auto;
     padding: 1rem;
@@ -46,7 +46,7 @@ main {
     margin: 0 auto;
 
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
 }
@@ -99,8 +99,9 @@ select {
 }
 
 h1 {
-    margin: 0 1rem;
+    padding: 0;
 }
+
 
 /*=======================
         AESTHETICS
@@ -189,7 +190,7 @@ footer {
 
 h1 {
     font-family: 'Pacifico', cursive;
-    font-size: 2.2rem;
+    font-size: 1.9rem;
 }
 
 footer {
